--- a/ElasticSearchWebApi/appsettings.json
+++ b/ElasticSearchWebApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "elastic-search": "Nodes=http://localhost:9200;DefaultIndex=product;"
+    "elastic-search": "Nodes=http://localhost:9200;DefaultIndex=products;"
   },
   "Logging": {
     "LogLevel": {
