move elastic settings to appsettings.json

--- a/ElasticSearchWebApi/appsettings.json
+++ b/ElasticSearchWebApi/appsettings.json
@@ -9,5 +9,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "elasticsearch": {
+    "index": "products",
+    "url": "http://localhost:9200/"
+  },
   "AllowedHosts": "*"
 }
